subindo controller de transactions e ajustes
